# Master_Thesis_E2E_RL_Teleop

./: .gitignore  =2.9.0  README.md  a  requirements.txt
ROS2_Instruction/: colcon_methods.md  package_xml.md  ros2_bag.md  ros2_launch.md  ros2_services.md  setup_py.md
ROS2_Instruction/Run_Instruction/: run.md
ROS2_Instruction/example_Code/: create_franka_project.sh  rl_teleoperation.launch.py  setup_environment.sh
libfranka_ws/: MUJOCO_LOG.TXT  create_franka_project.sh  run.md  setup_environment.sh
libfranka_ws/install/: local_setup.sh  setup.sh
libfranka_ws/log/: latest_build
libfranka_ws/src/E2E_Teleoperation/: package.xml  setup.cfg  setup.py
libfranka_ws/src/E2E_Teleoperation/E2E_Teleoperation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
libfranka_ws/src/E2E_Teleoperation/launch/: local_robot.launch.py  remote_agent.launch.py  remote_sim.launch.py
libfranka_ws/src/End-to-End_Teleoperation/: package.xml  setup.cfg  setup.py
libfranka_ws/src/End_to_End_RL_In_Teleoperation/: setup.cfg  setup.py
libfranka_ws/src/End_to_End_RL_In_Teleoperation/launch/: remote_agent.launch.py
libfranka_ws/src/Hierarchical_RL_Teleoperation/: package.xml  setup.cfg  setup.py
libfranka_ws/src/Hierarchical_RL_Teleoperation/launch/: follower_mujoco_simulator.launch.py  follower_real_robot.launch.py
libfranka_ws/src/Hierarchical_Reinforcement_Learning_for_Adaptive_Control_Under_Stochastic_Network_Delays/launch/: leader_mujoco_simulator.launch.py
libfranka_ws/src/Model_Based_RL_Teleoperation/: package.xml  setup.cfg  setup.py
libfranka_ws/src/Model_Based_RL_Teleoperation/Model_based_RL_Teleoperation.egg-info/: PKG-INFO  SOURCES.txt
libfranka_ws/src/Model_Based_RL_Teleoperation/Model_based_Reinforcement_Learning_In_Teleoperation.egg-info/: entry_points.txt
libfranka_ws/src/Model_Based_RL_Teleoperation/launch/: remote_agent.launch.py  remote_sim.launch.py
libfranka_ws/src/Model_based_Reinforcement_Learning_In_Teleoperation/: package.xml  setup.py
libfranka_ws/src/Model_based_Reinforcement_Learning_In_Teleoperation/Model_based_Reinforcement_Learning_In_Teleoperation.egg-info/: top_level.txt
libfranka_ws/src/Model_based_Reinforcement_Learning_In_Teleoperation/launch/: local_robot.launch.py  (+2 more)
libfranka_ws/src/Reinforcement_Learning_In_Teleoperation/: package.xml  setup.cfg  setup.py
libfranka_ws/src/multipanda_ros2/garmi_packages/garmi_hardware/: CMakeLists.txt  README.md  garmi_hardware.xml  package.xml
libfranka_ws/src/multipanda_ros2/garmi_packages/garmi_hardware/include/garmi_hardware/: garmi_base_hardware_interface.hpp  garmi_head_hardware_interface.hpp  helper_functions.hpp  udp_server.hpp
libfranka_ws/src/multipanda_ros2/garmi_packages/garmi_hardware/src/: garmi_base_hardware_interface.cpp  garmi_head_hardware_interface.cpp  helper_functions.cpp  udp_server.cpp
(+2212 files in other folders)
